Corrects flapping channels on Home when using single home for security and energy
Signed-off-by: clinique <gael@lhopital.org>