@@ -23,7 +23,7 @@ import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.netatmo.internal.api.dto.HomeData;
 import org.openhab.binding.netatmo.internal.api.dto.HomeStatusPerson;
-import org.openhab.binding.netatmo.internal.api.dto.NAHomeStatus.HomeStatus;
+import org.openhab.binding.netatmo.internal.api.dto.NAHomeStatus;
 import org.openhab.binding.netatmo.internal.api.dto.NAObject;
 import org.openhab.binding.netatmo.internal.deserialization.NAObjectMap;
 import org.openhab.core.library.types.DecimalType;
@@ -50,16 +50,12 @@ public class SecurityChannelHelper extends ChannelHelper {
     @Override
     public void setNewData(@Nullable NAObject data) {
         super.setNewData(data);
-        if (data instanceof HomeData) {
-            HomeData homeData = (HomeData) data;
-            knownIds = homeData.getPersons().values().stream().filter(person -> person.isKnown()).map(p -> p.getId())
-                    .collect(Collectors.toList());
-        }
-        if (data instanceof HomeStatus) {
-            HomeStatus status = (HomeStatus) data;
-            NAObjectMap<HomeStatusPerson> allPersons = status.getPersons();
-            List<HomeStatusPerson> present = allPersons.values().stream().filter(p -> !p.isOutOfSight())
-                    .collect(Collectors.toList());
+        if (data instanceof HomeData.Security securityData) {
+            knownIds = securityData.getPersons().values().stream().filter(person -> person.isKnown())
+                    .map(p -> p.getId()).collect(Collectors.toList());
+        } else if (data instanceof NAHomeStatus.Security securityStatus) {
+            NAObjectMap<HomeStatusPerson> allPersons = securityStatus.getPersons();
+            List<HomeStatusPerson> present = allPersons.values().stream().filter(p -> !p.isOutOfSight()).toList();
 
             persons = present.size();
             unknowns = present.stream().filter(person -> !knownIds.contains(person.getId())).count();
